-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.15.1
-
Fix Version/s: 6.0.0 RC
-
Component/s: GUI: High-DPI, QPA: Wayland
-
Labels:
-
Platform/s:
-
Commits:6ed363e3665f17d935f8636d9c958154c898f5c5 (qt/qtwayland/dev) a825fb5f714fd79d16cc3ebbdd327e7961b07d0a (qt/qtwayland/5.15)
When a window's size is set using setFixedSize() it's content will scale accordingly, but the window itself remains the same size regardless of the value of QT_SCALE_FACTOR. When the window's size is set using resize(), the window does scale itself correctly and it and it's contents are drawn at the correct size.
It works on X11.
The README in the example showing how to run the various commands to
show the behavior we are seeing.